set a body background color to prevent flickering

--- a/letsmeet/main/static/css/custom.css
+++ b/letsmeet/main/static/css/custom.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #444;
+}
+
 .home-banner {
     padding-top: 3rem;
     padding-left: 3rem;
